# hetarch

./: .gitignore  CMakeLists.txt  README.md  buildformsp.sh  buildllvm.sh  compileMemMapDef.sh
examples/: CMakeLists.txt  arithm.h  basic.h  example_utils.h  gensample1.cpp  hostSample1.cpp  localLoader.cpp  logger.h  memmap.def  motors.h  motorsSample.cpp  msp_ext_points.h  msp_utils.cpp  msp_utils.h  sensor.h  trikSorts1.cpp  triksample1.cpp  triksample2.cpp
include/: CodeGen.h  Executor.h  IRDumper.h  MemManager.h  MemMgr.h  MemResident.h  Pipeline.h  TCPTestConn.h  cg.h  cgImpl.h  conn.h  dsl.h  dslutils.h  trikMspI2c.h  util_type_traits.h  utils.h
include/conn/: ConnImplBase.h  IConnection.h  PosixConn.h  TCPConnImpl.h  conn_utils.h
include/dsl/: IRTranslator.h  ResidentGlobal.h  ResidentObjCode.h  base.h  cast.h  dsl_base.h  dsl_meta.h  dsl_type_traits.h  for.h  fun.h  if.h  logging.h  logical.h  sequence.h  struct.h  switch.h  types_map.h  value.h  while.h
include/old/: I2CConnection.h  i2ccommands.h
lib/: IRDumper.cpp  base.cpp  cg.cpp  cgImpl.cpp  dsl.cpp  tcpTestConn.cpp  trikMspI2c.cpp
lib/conn/: TCPConnImpl.cpp  ht_proto.c
lib/old/: trikMspI2c.cpp
new/: CodeGen.cpp  CodeGen.h  CodeLoader.h  Executor.h  IConnection.h  IDSLCallable.h  MemManager.h  MemResident.h  MemoryManager.h  TCPConnection.cpp  TCPConnection.h  Transmission.h  VCPConnection.h  addr_typedef.h  conn_utils.cpp  conn_utils.h  dsl.h  ht_proto.h  supportingClasses.h  utils.h
new/conn/: IConnection.h  PosixConn.h  SerialConnImpl.h  TCPConnImpl.cpp  TCPConnImpl.h  TCPConnection.cpp  TCPConnection.h  conn_utils.h  ht_proto.h
new/dsl/: IDSLCallable.h  IRTranslator.h  ResidentGlobal.h  ResidentObjCode.h  array.h  cast.h  dsl_base.h  dsl_meta.h  dsl_type_traits.h  fun.h  if_else.h  logging.h  loops.h  op.h  ptr.h  sequence.h  struct.h  to_dsl_trait.h  types_map.h  value.h  var.h
scripts/: build_llvm_cross.sh  build_llvm_test.sh
tests/: CMakeLists.txt  codegen_tests.cpp  dsl_tests.cpp  main.cpp  mem_tests.cpp  mocks.h  scratch_tests.cpp  test_utils.cpp  test_utils.h  utils.cpp  utils.h
tests/test_resources/: build.sh  do_nothing.ll  main.ll  part1.bc  part1.cpp  part1.ll  part2.cpp  part2.ll  self_sufficient.cpp  self_sufficient.ll  test_config.txt
